# CHIP-8

./: .gitignore  CMakeLists.txt  imgui.ini  main.c  main.cpp  video.c  video.h
chip_8/: CMakeLists.txt  chip_8.c  chip_8.h
chip_8/instructions/: CMakeLists.txt  instructions.c  instructions.h
chip_8/registers/: CMakeLists.txt  register.c  register.h
event/: CMakeLists.txt  event.c  event.h
video/: CMakeLists.txt  video.c  video.h
